--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>SEO</h3>
         <div class="maincontainer">
             <div class="thecard">
-                <div class='thefront'><img src="img/seo.svg" alt="SEO icon" height="285" width="272"></div>
+                <div class='thefront'><img src="img/SEO.svg" alt="SEO icon" height="285" width="272"></div>
                 <div class="theback"><p>Search Engine Optimization puts you on the front page of Google, it makes sure your story is heard!</p></div>
             </div>
         </div>
